--- a/index.html
+++ b/index.html
@@ -4,20 +4,61 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
+
   <style>
-    html,body{
-      margin:0;
-      height:100%;
-      background:#5f7f6b; /* turquoise + olive */
-      color:#0b1a14;
-      font-family:system-ui, monospace;
-      display:flex;
-      align-items:center;
-      justify-content:center;
+    html, body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #5f7f6b; /* turquoise + olive */
+      font-family: system-ui, monospace;
+    }
+
+    /* stream layer */
+    iframe#stream {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none; /* water is visual only */
+    }
+
+    /* placeholder / future content layer */
+    .scene {
+      position: relative;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #0b1a14;
     }
   </style>
 </head>
+
 <body>
-  <div>—</div>
+
+  <!-- STREAM (auto cache-busted) -->
+  <iframe
+    id="stream"
+    src="stream.html?v=<?php echo time(); ?>"
+  ></iframe>
+
+  <!-- SCENE CONTENT -->
+  <div class="scene">
+    <div>—</div>
+  </div>
+
+  <script>
+    // GitHub Pages–safe cache busting (no PHP)
+    const iframe = document.getElementById("stream");
+    const url = new URL("stream.html", window.location.href);
+    url.searchParams.set("v", Date.now());
+    iframe.src = url.toString();
+  </script>
+
 </body>
 </html>
