--- a/index.html
+++ b/index.html
@@ -15,20 +15,32 @@
       font-family: system-ui, monospace;
     }
 
-    /* stream layer */
+    /* LAND (horizon) */
+    iframe#land {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    /* WATER (stream) */
     iframe#stream {
       position: absolute;
       inset: 0;
       width: 100%;
       height: 100%;
       border: none;
-      pointer-events: none; /* water is visual only */
+      pointer-events: none;
+      z-index: 1;
     }
 
-    /* placeholder / future content layer */
+    /* SCENE / FUTURE CONTENT */
     .scene {
       position: relative;
-      z-index: 1;
+      z-index: 2;
       width: 100%;
       height: 100%;
       display: flex;
@@ -41,11 +53,11 @@
 
 <body>
 
-  <!-- STREAM (auto cache-busted) -->
-  <iframe
-    id="stream"
-    src="stream.html?v=<?php echo time(); ?>"
-  ></iframe>
+  <!-- LAND (horizon layer) -->
+  <iframe id="land"></iframe>
+
+  <!-- WATER -->
+  <iframe id="stream"></iframe>
 
   <!-- SCENE CONTENT -->
   <div class="scene">
@@ -53,11 +65,17 @@
   </div>
 
   <script>
-    // GitHub Pages–safe cache busting (no PHP)
-    const iframe = document.getElementById("stream");
-    const url = new URL("stream.html", window.location.href);
-    url.searchParams.set("v", Date.now());
-    iframe.src = url.toString();
+    // GitHub Pages–safe cache busting
+    const land = document.getElementById("land");
+    const stream = document.getElementById("stream");
+
+    const landURL = new URL("land.html", window.location.href);
+    landURL.searchParams.set("v", Date.now());
+    land.src = landURL.toString();
+
+    const streamURL = new URL("stream.html", window.location.href);
+    streamURL.searchParams.set("v", Date.now());
+    stream.src = streamURL.toString();
   </script>
 
 </body>
