--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-family: system-ui, monospace;
     }
 
-    /* LAND (horizon) */
+    /* LAND (horizon layer) */
     iframe#land {
       position: absolute;
       inset: 0;
@@ -26,7 +26,7 @@
       z-index: 0;
     }
 
-    /* WATER (stream) */
+    /* WATER (stream layer) */
     iframe#stream {
       position: absolute;
       inset: 0;
@@ -43,26 +43,20 @@
       z-index: 2;
       width: 100%;
       height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #0b1a14;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- LAND (horizon layer) -->
+  <!-- LAND -->
   <iframe id="land"></iframe>
 
   <!-- WATER -->
   <iframe id="stream"></iframe>
 
-  <!-- SCENE CONTENT -->
-  <div class="scene">
-    <div>—</div>
-  </div>
+  <!-- SCENE CONTENT (empty for now) -->
+  <div class="scene"></div>
 
   <script>
     // GitHub Pages–safe cache busting
