--- a/index.html
+++ b/index.html
@@ -37,10 +37,21 @@
       z-index: 1;
     }
 
+    /* WATERFALL (vertical motion layer) */
+    iframe#waterfall {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none;
+      z-index: 2;
+    }
+
     /* SCENE / FUTURE CONTENT */
     .scene {
       position: relative;
-      z-index: 2;
+      z-index: 3;
       width: 100%;
       height: 100%;
     }
@@ -55,6 +66,9 @@
   <!-- WATER -->
   <iframe id="stream"></iframe>
 
+  <!-- WATERFALL -->
+  <iframe id="waterfall"></iframe>
+
   <!-- SCENE CONTENT (empty for now) -->
   <div class="scene"></div>
 
@@ -62,6 +76,7 @@
     // GitHub Pages–safe cache busting
     const land = document.getElementById("land");
     const stream = document.getElementById("stream");
+    const waterfall = document.getElementById("waterfall");
 
     const landURL = new URL("land.html", window.location.href);
     landURL.searchParams.set("v", Date.now());
@@ -70,6 +85,10 @@
     const streamURL = new URL("stream.html", window.location.href);
     streamURL.searchParams.set("v", Date.now());
     stream.src = streamURL.toString();
+
+    const waterfallURL = new URL("waterfall.html", window.location.href);
+    waterfallURL.searchParams.set("v", Date.now());
+    waterfall.src = waterfallURL.toString();
   </script>
 
 </body>
