--- a/waterfall.html
+++ b/waterfall.html
@@ -16,10 +16,7 @@ html, body {
 
 canvas {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 18vh;
+  inset: 0;
   pointer-events: none;
 }
 </style>
@@ -35,26 +32,30 @@ const ctx = canvas.getContext("2d", { alpha: true });
 
 function resize() {
   canvas.width = window.innerWidth;
-  canvas.height = Math.floor(window.innerHeight * 0.18);
+  canvas.height = window.innerHeight;
 }
 resize();
 window.addEventListener("resize", resize);
 
 /* =========================
-   WATERFALL LINES
+   VERTICAL WATERFALL COLUMN
 ========================= */
-const LINE_COUNT = 110;
+const LINE_COUNT = 120;
+const COLUMN_WIDTH = Math.min(220, window.innerWidth * 0.18);
+const CENTER_X = () => canvas.width / 2;
+
 const lines = [];
 
 for (let i = 0; i < LINE_COUNT; i++) {
   lines.push({
+    x: (Math.random() - 0.5) * COLUMN_WIDTH,
     y: Math.random() * canvas.height,
     amp: 1 + Math.random() * 3,
-    freq: 0.001 + Math.random() * 0.002,
+    freq: 0.002 + Math.random() * 0.004,
     phase: Math.random() * Math.PI * 2,
     thickness: Math.random() < 0.9 ? 1 : 2,
     alpha: 0.06 + Math.random() * 0.18,
-    speed: 0.15 + Math.random() * 0.35
+    speed: 0.6 + Math.random() * 1.2
   });
 }
 
@@ -72,28 +73,30 @@ function draw() {
     ctx.lineWidth = line.thickness;
     ctx.strokeStyle = `rgba(255,255,255,${line.alpha})`;
 
-    let prevY = null;
+    let prevX = null;
 
-    for (let x = 0; x <= canvas.width; x += 12) {
-      const y =
-        line.y +
-        Math.sin((x * line.freq) + line.phase + t * 0.5) * line.amp;
+    for (let y = -20; y <= canvas.height + 20; y += 12) {
+      const x =
+        CENTER_X() +
+        line.x +
+        Math.sin(y * line.freq + line.phase + t) * line.amp;
 
-      if (prevY !== null && Math.abs(y - prevY) > 10) continue;
+      if (prevX !== null && Math.abs(x - prevX) > 10) continue;
 
-      if (x === 0) ctx.moveTo(x, y);
+      if (y <= -20) ctx.moveTo(x, y);
       else ctx.lineTo(x, y);
 
-      prevY = y;
+      prevX = x;
     }
 
     ctx.stroke();
 
-    /* downward flow */
+    /* gravity */
     line.y += line.speed;
+    line.phase += 0.01;
 
-    if (line.y > canvas.height + 4) {
-      line.y = -4;
+    if (line.y > canvas.height + 40) {
+      line.y = -40;
     }
   }
 
