--- a/waterfall3.html
+++ b/waterfall3.html
@@ -7,7 +7,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: black;
+  background: transparent;
   overflow: hidden;
 }
 canvas { display: block; }
