--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-      background: #5f7f6b; /* turquoise + olive */
+      background: #5f7f6b;
       font-family: system-ui, monospace;
     }
 
-    /* LAND (horizon layer) */
+    /* LAND */
     iframe#land {
       position: absolute;
       inset: 0;
@@ -26,7 +26,7 @@
       z-index: 0;
     }
 
-    /* WATER (stream layer) */
+    /* WATER */
     iframe#stream {
       position: absolute;
       inset: 0;
@@ -37,7 +37,7 @@
       z-index: 1;
     }
 
-    /* WATERFALL (normal merge) */
+    /* WATERFALL */
     iframe#waterfall {
       position: absolute;
       inset: 0;
@@ -48,7 +48,7 @@
       z-index: 2;
     }
 
-    /* WATERFALL 2 (flows OVER land) */
+    /* WATERFALL 2 */
     iframe#waterfall2 {
       position: absolute;
       inset: 0;
@@ -59,20 +59,19 @@
       z-index: 4;
     }
 
-    /* WATERFALL 3 (DFI sand sign – LEFT SIDE FEATURE) */
+    /* WATERFALL 3 — TOP ORIGIN */
     iframe#waterfall3 {
       position: absolute;
-      top: 50%;
-      left: 0;
-      width: 40vw;
+      top: 0;
+      left: 50%;
+      width: 30vw;
       height: 70vh;
-      transform: translateY(-50%);
+      transform: translateX(-50%);
       border: none;
       pointer-events: none;
       z-index: 3;
     }
 
-    /* SCENE / FUTURE CONTENT */
     .scene {
       position: relative;
       z-index: 5;
@@ -95,36 +94,34 @@
   <iframe id="waterfall2"></iframe>
   <iframe id="waterfall3"></iframe>
 
-  <!-- SCENE CONTENT -->
   <div class="scene"></div>
 
   <script>
-    // GitHub Pages–safe cache busting
     const land = document.getElementById("land");
     const stream = document.getElementById("stream");
     const waterfall = document.getElementById("waterfall");
     const waterfall2 = document.getElementById("waterfall2");
     const waterfall3 = document.getElementById("waterfall3");
 
-    const landURL = new URL("land.html", window.location.href);
+    const landURL = new URL("land.html", location.href);
     landURL.searchParams.set("v", Date.now());
-    land.src = landURL.toString();
+    land.src = landURL;
 
-    const streamURL = new URL("stream.html", window.location.href);
+    const streamURL = new URL("stream.html", location.href);
     streamURL.searchParams.set("v", Date.now());
-    stream.src = streamURL.toString();
+    stream.src = streamURL;
 
-    const waterfallURL = new URL("waterfall.html", window.location.href);
+    const waterfallURL = new URL("waterfall.html", location.href);
     waterfallURL.searchParams.set("v", Date.now());
-    waterfall.src = waterfallURL.toString();
+    waterfall.src = waterfallURL;
 
-    const waterfall2URL = new URL("waterfall2.html", window.location.href);
+    const waterfall2URL = new URL("waterfall2.html", location.href);
     waterfall2URL.searchParams.set("v", Date.now());
-    waterfall2.src = waterfall2URL.toString();
+    waterfall2.src = waterfall2URL;
 
-    const waterfall3URL = new URL("waterfall3.html", window.location.href);
+    const waterfall3URL = new URL("waterfall3.html", location.href);
     waterfall3URL.searchParams.set("v", Date.now());
-    waterfall3.src = waterfall3URL.toString();
+    waterfall3.src = waterfall3URL;
   </script>
 
 </body>
