--- a/index.html
+++ b/index.html
@@ -72,9 +72,20 @@
       z-index: 3;
     }
 
+    /* WATERFALL 4 */
+    iframe#waterfall4 {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none;
+      z-index: 6;
+    }
+
     .scene {
       position: relative;
-      z-index: 5;
+      z-index: 7;
       width: 100%;
       height: 100%;
     }
@@ -93,6 +104,7 @@
   <iframe id="waterfall"></iframe>
   <iframe id="waterfall2"></iframe>
   <iframe id="waterfall3"></iframe>
+  <iframe id="waterfall4"></iframe>
 
   <div class="scene"></div>
 
@@ -102,6 +114,7 @@
     const waterfall = document.getElementById("waterfall");
     const waterfall2 = document.getElementById("waterfall2");
     const waterfall3 = document.getElementById("waterfall3");
+    const waterfall4 = document.getElementById("waterfall4");
 
     const landURL = new URL("land.html", location.href);
     landURL.searchParams.set("v", Date.now());
@@ -122,6 +135,10 @@
     const waterfall3URL = new URL("waterfall3.html", location.href);
     waterfall3URL.searchParams.set("v", Date.now());
     waterfall3.src = waterfall3URL;
+
+    const waterfall4URL = new URL("waterfall4.html", location.href);
+    waterfall4URL.searchParams.set("v", Date.now());
+    waterfall4.src = waterfall4URL;
   </script>
 
 </body>
