--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
       z-index: 0;
     }
 
+    /* GRASS (foreground base) */
+    iframe#grass {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none;
+      z-index: 1;
+    }
+
     /* WATER */
     iframe#stream {
       position: absolute;
@@ -34,7 +45,18 @@
       height: 100%;
       border: none;
       pointer-events: none;
-      z-index: 1;
+      z-index: 2;
+    }
+
+    /* LEAVES (ambient overlay) */
+    iframe#leaf {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none;
+      z-index: 3;
     }
 
     /* WATERFALL */
@@ -45,7 +67,7 @@
       height: 100%;
       border: none;
       pointer-events: none;
-      z-index: 2;
+      z-index: 4;
     }
 
     /* WATERFALL 2 */
@@ -56,7 +78,7 @@
       height: 100%;
       border: none;
       pointer-events: none;
-      z-index: 4;
+      z-index: 5;
     }
 
     /* WATERFALL 3 — TOP ORIGIN */
@@ -69,7 +91,7 @@
       transform: translateX(-50%);
       border: none;
       pointer-events: none;
-      z-index: 3;
+      z-index: 6;
     }
 
     /* WATERFALL 4 */
@@ -80,12 +102,12 @@
       height: 100%;
       border: none;
       pointer-events: none;
-      z-index: 6;
+      z-index: 7;
     }
 
     .scene {
       position: relative;
-      z-index: 7;
+      z-index: 8;
       width: 100%;
       height: 100%;
     }
@@ -97,8 +119,14 @@
   <!-- LAND -->
   <iframe id="land"></iframe>
 
+  <!-- GRASS -->
+  <iframe id="grass"></iframe>
+
   <!-- WATER -->
   <iframe id="stream"></iframe>
+
+  <!-- LEAVES -->
+  <iframe id="leaf"></iframe>
 
   <!-- WATERFALLS -->
   <iframe id="waterfall"></iframe>
@@ -110,35 +138,28 @@
 
   <script>
     const land = document.getElementById("land");
+    const grass = document.getElementById("grass");
     const stream = document.getElementById("stream");
+    const leaf = document.getElementById("leaf");
     const waterfall = document.getElementById("waterfall");
     const waterfall2 = document.getElementById("waterfall2");
     const waterfall3 = document.getElementById("waterfall3");
     const waterfall4 = document.getElementById("waterfall4");
 
-    const landURL = new URL("land.html", location.href);
-    landURL.searchParams.set("v", Date.now());
-    land.src = landURL;
+    function load(id, file){
+      const url = new URL(file, location.href);
+      url.searchParams.set("v", Date.now());
+      id.src = url;
+    }
 
-    const streamURL = new URL("stream.html", location.href);
-    streamURL.searchParams.set("v", Date.now());
-    stream.src = streamURL;
-
-    const waterfallURL = new URL("waterfall.html", location.href);
-    waterfallURL.searchParams.set("v", Date.now());
-    waterfall.src = waterfallURL;
-
-    const waterfall2URL = new URL("waterfall2.html", location.href);
-    waterfall2URL.searchParams.set("v", Date.now());
-    waterfall2.src = waterfall2URL;
-
-    const waterfall3URL = new URL("waterfall3.html", location.href);
-    waterfall3URL.searchParams.set("v", Date.now());
-    waterfall3.src = waterfall3URL;
-
-    const waterfall4URL = new URL("waterfall4.html", location.href);
-    waterfall4URL.searchParams.set("v", Date.now());
-    waterfall4.src = waterfall4URL;
+    load(land, "land.html");
+    load(grass, "grass.html");
+    load(stream, "stream.html");
+    load(leaf, "leaf.html");
+    load(waterfall, "waterfall.html");
+    load(waterfall2, "waterfall2.html");
+    load(waterfall3, "waterfall3.html");
+    load(waterfall4, "waterfall4.html");
   </script>
 
 </body>
